--- a/references.html
+++ b/references.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Polar Ice Caps</title>
-    <link rel="stylesheet" href="../css/references.css">
+    <link rel="stylesheet" href="css/references.css">
     <script src="https://kit.fontawesome.com/0e19e0c600.js"></script>
 </head>
 
@@ -26,14 +26,14 @@
     </nav>
     <div class="logo">
         <ul class="navbar-nav">
-            <a href="index.html"><img border="0" alt="home" src="../images/logo.PNG" width="100" height="50"></a>
+            <a href="index.html"><img border="0" alt="home" src="images/logo.PNG" width="100" height="50"></a>
         </ul>
     </div>
     <div id="side-menu" class="side-nav">
         <a href="#" class="btn-close" onclick="closeSlideMenu()"> MENU &times;</a>
         <!--Links Will be images-->
-        <a href="sea-level.html"><img border="0" alt="home" src="../images/rising-sea-lvl-nav-link.PNG" width="250" height="300"></a>
-        <a href="eco-system.html"><img border="0" alt="home" src="../images/eco-system-nav-link.PNG" width="250" height="300"></a>
+        <a href="sea-level.html"><img border="0" alt="home" src="images/rising-sea-lvl-nav-link.PNG" width="250" height="300"></a>
+        <a href="eco-system.html"><img border="0" alt="home" src="images/eco-system-nav-link.PNG" width="250" height="300"></a>
     </div>
 
     <div class="search-bar">
